--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,37 @@
 <resources>
     <string name="app_name">CalculatorLaunch</string>
+    <!--<string name="error_syntax" msgid="6940043994468390738">"Error"</string>-->
+    <!--<string name="error_nan" msgid="4071578355972369426">"Not a number"</string>-->
+
+    <!--TODO-->
+    <string name="error_syntax">Error</string>
+    <string name="error_nan">Not a number</string>
+
+
+    <!-- Abbrev. name of cosine function (e.g. "cos(π)". [CHAR_LIMIT=3] -->
+    <string name="fun_cos">cos</string>
+    <!-- Natural logarithm function (e.g. "ln(2)"). [CHAR_LIMIT=3] -->
+    <string name="fun_ln">ln</string>
+    <!-- Logarithm function (e.g. "log(10)"). [CHAR_LIMIT=3] -->
+    <string name="fun_log">log</string>
+    <!-- Abbrev. name of sine function (e.g. "sin(π)". [CHAR_LIMIT=3] -->
+    <string name="fun_sin">sin</string>
+    <!-- Abbrev. name of tangent function (e.g. "tan(π)". [CHAR_LIMIT=3] -->
+    <string name="fun_tan">tan</string>
+
+    <string name="desc_fun_cos" msgid="3197307754450718348">"cosine"</string>
+    <string name="desc_fun_ln" msgid="4943842219071979148">"natural logarithm"</string>
+    <string name="desc_fun_log" msgid="6163178034661345125">"logarithm"</string>
+    <string name="desc_fun_sin" msgid="4010564022860883142">"sine"</string>
+    <string name="desc_fun_tan" msgid="8547330421304946587">"tangent"</string>
+    <string name="desc_op_add" msgid="1174812755738083078">"plus"</string>
+    <string name="desc_op_div" msgid="8320455802423478031">"divide"</string>
+    <string name="desc_op_fact" msgid="5004950609277631750">"factorial"</string>
+    <string name="desc_op_mul" msgid="978652245185868311">"times"</string>
+    <string name="desc_op_pow" msgid="2620877401884059447">"power"</string>
+    <string name="desc_op_sqrt" msgid="4405610392216554239">"square root"</string>
+    <string name="desc_op_sub" msgid="2563060630032563021">"minus"</string>
+    <string name="desc_clr" msgid="8357371663749541924">"clear"</string>
+    <string name="desc_del" msgid="1866733601083210032">"delete"</string>
+    <string name="desc_eq" msgid="8068773095462472408">"equals"</string>
 </resources>
