--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,22 @@
     <string name="desc_clr" msgid="8357371663749541924">"clear"</string>
     <string name="desc_del" msgid="1866733601083210032">"delete"</string>
     <string name="desc_eq" msgid="8068773095462472408">"equals"</string>
+
+
+
+    <!--<string name="app_name">SlidingMenu</string>-->
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
+
+    <string-array name="titles">
+        <item>Facebook</item>
+        <item>Google-Plus</item>
+        <item>TutorialsBuzz</item>
+    </string-array>
+
+    <array name="icons">
+        <item>@drawable/fb</item>
+        <item>@drawable/gplus</item>
+        <item>@drawable/tb</item>
+    </array>
 </resources>
