--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,10 @@
     <string name="ok">Ok</string>
     <string name="cancel">Cancel</string>
 
+    <string name="ColorTheme">Color Theme</string>
+    <string name="FontType">Font Type</string>
+
+
     <string-array name="toppings">
         <item>Onion</item>
         <item>Letuce</item>
