--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
     </string-array>
 
     <string-array name="pankaj_themes">
-        <item>Amaya Gold</item>
+        <item>Amaya-Gold</item>
         <item>Material-Pink</item>
         <item>Material-Purple</item>
         <item>Material-Light Blue</item>
