--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
 
     <string name="ok">Ok</string>
     <string name="cancel">Cancel</string>
+    <string name="close">Close</string>
     <string name="ClearHistory">Clear History</string>
 
 
